Fixed Header Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@ main {
 }
 
 .main-header {
+  margin-top: 0;
+  padding-top: 5rem;
   text-align: center;
   color: #FFFEFF;
 }
